# mysite

./: .gitignore  README.md  pyproject.toml
mysite/mysite/: settings.py
