[project]
name = "mysite"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sarasaranuranura", email = "wada121400@gmail.com" }
]
dependencies = [
    "django>=5.1.1",
    "ruff>=0.6.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
